# simple-port-scanner

./: .gitignore  LICENSE  README.md  port_scan_results.xlsx  port_scanner.py  pyproject.toml
